--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -6,8 +6,10 @@
   <% end %>
 
   <div class="flex justify-between items-center">
+    <%= link_to "← Back to Home", root_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+
     <h1 class="font-bold text-4xl">Workouts</h1>
-    <%= link_to "New workout", new_workout_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
+    <%= link_to "+ New workout", new_workout_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
   </div>
 
   <div id="workouts" class="min-w-full divide-y divide-gray-200 space-y-5">
