workout page displays in chronological order (dates)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,6 +16,6 @@
   <!-- Buttons -->
   <div class="space-y-4">
     <%= link_to "Log Workout", new_workout_path, class: "block w-40 text-center bg-gray-300 text-black py-2 rounded-full shadow hover:bg-gray-400 transition" %>
-    <%= link_to "Edit Workout", workouts_path, class: "block w-40 text-center bg-gray-300 text-black py-2 rounded-full shadow hover:bg-gray-400 transition" %>
+    <%= link_to "View Workouts", workouts_path, class: "block w-40 text-center bg-gray-300 text-black py-2 rounded-full shadow hover:bg-gray-400 transition" %>
   </div>
 </div>
