add calendar to home screen

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="min-h-screen flex flex-col items-center space-y-10 p-6">
-  <h1 class="text-2xl font-semibold">Workout Tracker</h1>
+  <h1 class="text-4xl font-bold text-blue-900 tracking-tight">Workout Tracker</h1>
 
   <div class="w-full max-w-full flex flex-col md:flex-row justify-center items-start gap-10 mt-6">
 
@@ -42,5 +42,7 @@
   <div class="mt-10 space-y-4">
     <%= link_to "Log Workout", new_workout_path, class: "block w-40 text-center bg-yellow-200 text-black py-2 rounded-full shadow hover:bg-yellow-300 transition" %>
     <%= link_to "View Workouts", workouts_path, class: "block w-40 text-center bg-yellow-200 text-black py-2 rounded-full shadow hover:bg-yellow-300 transition" %>
+    <%= link_to "View Calendar", calendar_path,
+    class: "w-48 text-center bg-blue-200 hover:bg-blue-300 text-black font-semibold py-2 rounded-xl shadow-lg transition" %>
   </div>
 </div>
