--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-gradient-to-br from-blue-50 to-green-100 min-h-screen">
     <main class="container mx-auto mt-28 px-5">
       <%= yield %>
     </main>
