change calendar button

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,6 @@
   <div class="mt-10 space-y-4">
     <%= link_to "Log Workout", new_workout_path, class: "block w-40 text-center bg-yellow-200 text-black py-2 rounded-full shadow hover:bg-yellow-300 transition" %>
     <%= link_to "View Workouts", workouts_path, class: "block w-40 text-center bg-yellow-200 text-black py-2 rounded-full shadow hover:bg-yellow-300 transition" %>
-    <%= link_to "View Calendar", calendar_path,
-    class: "w-48 text-center bg-blue-200 hover:bg-blue-300 text-black font-semibold py-2 rounded-xl shadow-lg transition" %>
+    <%= link_to "View Calendar", calendar_path, class: "block w-40 text-center bg-yellow-200 text-black py-2 rounded-full shadow hover:bg-yellow-300 transition" %>
   </div>
 </div>
