--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,6 +1,21 @@
-<div class="space-y-12">
-    <h1>Home</h1>
+<div class="min-h-screen flex flex-col items-center justify-center bg-gray-100 py-16 space-y-8">
+  <h1 class="text-4xl font-bold text-gray-800">Welcome Home</h1>
 
-    <%= link_to "Login", new_session_path %>
+  <button class="btn btn-blue">
+    <a href="/session/new">
+      Login
+    </a>
+  </button>
 
+  <style>
+    .btn {
+        @apply font-bold py-2 px-4 rounded;
+    }
+    .btn-blue {
+        @apply bg-blue-500 text-white;
+    }
+    .btn-blue:hover {
+        @apply bg-blue-700;
+    }
+  </style>
 </div>
